--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
     "@types/three": "^0.177.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "lightningcss": "1.30.1",
     "lightningcss-cli": "^1.30.2",
     "prisma": "^6.4.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "lightningcss-linux-x64-gnu": "1.30.1"
   }
 }
